--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
   "dependencies": {
     "uglify-js": "2.4.1",
     "datauri": "~0.2.0",
-    "clean-css": "1.1.7"
+    "clean-css": "1.1.7",
+    "ngmin": "^0.5.0",
+    "html-minify": "^0.3.1"
   },
   "scripts": {
     "test": "grunt test"
