--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "datauri": "~0.2.0",
     "clean-css": "1.1.7",
     "ngmin": "^0.5.0",
-    "html-minify": "^0.3.1"
+    "html-minify": "git://github.com/didzis/html-minify.git"
   },
   "scripts": {
     "test": "grunt test"
